add canonical tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>markdown-editor</title>
+    <title>Markdown to HTML Editor</title>
+    <!-- Deplyoments are aliased to www.rowrow.io and rowrow.io -->
+    <link rel="canonical" href="https://rowrow.io/" />
   </head>
   <body>
     <div id="app"></div>
