add FontAwesome CSS link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Markdown to HTML Editor</title>
     <!-- Deplyoments are aliased to www.rowrow.io and rowrow.io -->
     <link rel="canonical" href="https://rowrow.io/" />
+    <!-- FontAwesome for icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   </head>
   <body>
     <div id="app"></div>
